--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -100,7 +100,7 @@
       <div class="col-md-4 mb-5">
           <i class="fa fa-laptop fa-4x purple-text"></i>
           <h4 class="my-4 font-weight-italics">Discover</h4>
-          <p class="grey-text">Browse Unique Places, Events & Communities curated for you.</p>
+          <p class="grey-text">Browse Unique Places, Events & Communities curated for you...</p>
       </div>
       <!--Grid column-->
 
