--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -108,7 +108,7 @@
       <div class="col-md-4 mb-1">
         <i class="fa fa-camera-retro fa-4x purple-text"></i>
           <h4 class="my-4 font-weight-italics">Experience</h4>
-          <p class="grey-text">Secure Your place OnDemand. Invite Friends & Engage a Community.  
+          <p class="grey-text">Secure Your place OnDemand. Invite Friends & Engage a Community...  
           </p>
       </div>
       <!--Grid column-->
